=== Version 1.1

* changes and fixes:
  - fix documentation here and there
  - make sure all defined #to_s methods handle recursion

=== Version 1.0
Bumped version number because of incompatible changes. Make it 1.0 since
having 0. version numbers for this kind of library is completely meaningless

* incompatible changes:
  - Enumerable#+ acts on too many objects. Define it only on Enumerable::Enumerator
  - remove automatic convertion into ValueSet for methods which were doing it
  - removed Queue#get: fastthread is now the preferred threading library in
    Ruby 1.8.6, so Queue#get cannot be implemented anymore

* new features:
  - PkgConfig class
  - define Proc#same_body?, Proc#file and Proc#line
  - Module#attr_predicate
  - 'since', 'until' and block parameters for Exception#full_message
  - ValueSet#intersects? (more efficient than checking that the intersection
    is empty)

* changes and fixes:
  - properly handle singleton classes in has_ancestor?
  - properly handle recursion in ValueSet#to_s and Array#to_s
  - add the 'setup' task on the Rakefile to build the C extension
  - make Module#has_ancestor? work event if the C extension is not built

=== Version 0.2.3

* new features:
  - BenchmarkAllocation, a Benchmark-like interface to benchmark object
    allocation
  - ValueSet#delete_if
  - Time#from_hms takes a time as "h:m:s.ms" and builds the corresponding
    Time object. Note that "s", "s.ms", "m:s", "m:s.ms", ... are accepted
    formats

* changes and fixes:
  - define Queue#get only if we are using Ruby's core Queue. The current
    implementation is incompatible with fastthread for instance (and 
    fastthhread's maintainer does not want #get on its Queue). Included
    a patch to define Queue#get on fastthread
  - fix ValueSet#== raising if the argument is not a ValueSet
  - fix brain-dead SequenceEnumerator#+, which was changing its receiver

=== Version 0.2.2
The "don't forget to bump version number" release. 0.2 was supposed to be 0.2.1
